# ChangeLog for dev-perl/File-Which
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Which/ChangeLog,v 1.22 2011/09/04 11:20:42 tove Exp $

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -File-Which-1.09.ebuild:
  Cleanup

*File-Which-1.90.0 (30 Aug 2011)

  30 Aug 2011; Torsten Veller <tove@gentoo.org> +File-Which-1.90.0.ebuild:
  Change version scheme

  07 Jul 2011; Alexis Ballier <aballier@gentoo.org> File-Which-1.09.ebuild:
  keyword ~x86-fbsd

  03 Apr 2011; Torsten Veller <tove@gentoo.org> -File-Which-1.07.ebuild:
  Cleanup

  07 Dec 2010; Matt Turner <mattst88@gentoo.org> File-Which-1.09.ebuild:
  Added ~mips, bug 285343.

  09 Jan 2010; Fabian Groffen <grobian@gentoo.org> File-Which-1.09.ebuild:
  Transfer Prefix keywords

  25 Nov 2009; Torsten Veller <tove@gentoo.org> -File-Which-1.08.ebuild,
  File-Which-1.09.ebuild:
  Tests need a newer Test-Script (#294583). Cleanup

*File-Which-1.09 (10 Nov 2009)

  10 Nov 2009; Robin H. Johnson <robbat2@gentoo.org>
  +File-Which-1.09.ebuild:
  Version bump via perl-bump experimental tool.

  24 Sep 2009; Raúl Porcel <armin76@gentoo.org> File-Which-1.08.ebuild:
  Add ~arm/~s390/~sh wrt #285343

*File-Which-1.08 (17 Sep 2009)

  17 Sep 2009; Torsten Veller <tove@gentoo.org> File-Which-0.05.ebuild,
  +File-Which-1.08.ebuild:
  Version bump

*File-Which-1.07 (02 Aug 2009)

  02 Aug 2009; Torsten Veller <tove@gentoo.org> +File-Which-1.07.ebuild:
  Version bump

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> File-Which-0.05.ebuild:
  Stable for HPPA too.

  12 May 2007; Joshua Kinard <kumba@gentoo.org> File-Which-0.05.ebuild:
  Stable on mips.

  07 Feb 2007; Jeroen Roovers <jer@gentoo.org> File-Which-0.05.ebuild:
  Marked ~hppa (bug #165627).

  06 Feb 2007; Michael Cummings <mcummings@gentoo.org>
  File-Which-0.05.ebuild:
  Keywording ~mips, tested on swarm

  15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  File-Which-0.05.ebuild: