@@ -1,16 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST HTML-Parser-3.67.tar.gz 89269 RMD160 46d9d3aabdd5b1679f2469395a1a11e4327503b3 SHA1 80043488afe0dbd2650dcabd53feef7a067f3a06 SHA256 6518d7377607afc8c46a6974c07c0634d475f541c1acb540708388266232b720
 DIST HTML-Parser-3.69.tar.gz 89531 RMD160 55afbd697e6218d5173c688e04516bfd096ea348 SHA1 8f67a793c593529405f2615b3fdb60e92b44ffa1 SHA256 748b1c906500e3a921d0694acb9a3a7dd3f2ff6fa61c656b928bbf7686a42406
 EBUILD HTML-Parser-3.670.0.ebuild 716 RMD160 d23c707cd5829b00361b1a4c341892e5802ef077 SHA1 61cf5b3d6d4417890a80f608721c6c2eedd54898 SHA256 a129f40b3904db1575cec67baffd135aecab6b7ee1b5d3fb68640800fb7cd47c
-EBUILD HTML-Parser-3.690.0.ebuild 728 RMD160 0f3f8d9c6ffd0298677f52d4024f338e611b76cb SHA1 91c5f516facca5fe5956d003985b0ede5318c143 SHA256 19838a10d68fe73675de42519f2a030e376280881657b5863138b3433d08b11f
-MISC ChangeLog 17573 RMD160 9d673b9b1f5771643e2207c115d2bf2b1c6a02e9 SHA1 7ce2553e2b5e57ae3751e37fadd4025e1aee0068 SHA256 a4de6c7910c5aa1a3d5926695d63d22f98e25706e78542db0c2518de216652f2
+EBUILD HTML-Parser-3.690.0.ebuild 726 RMD160 40add432bc9f925369ac3853e2d7bfedcd589892 SHA1 3a68b8fdbd7964cbc39e0dbe28dcf242f6fcceff SHA256 ca1301dac2f0cd6e9a4461dc7440ee6c8e904a337d2c711be1400f2dc180714a
+MISC ChangeLog 17686 RMD160 36b3598afe4bf115267f89ae0ca651c92eff20b3 SHA1 3a99d80b21757a897bd6d7ee05e66df0f8d50f63 SHA256 083af7a0665bae2b8244b4ed87541a64ab2eebdcfd39369227d5605f3824a432
 MISC metadata.xml 237 RMD160 51fe8c38d63b754234b171cb6898f84464c58417 SHA1 e296a0f28578e7ac88428cdd1fa206e697764b6e SHA256 c0e1d068385f0a861445ee8325debe386e543a9eeacce7a54349fa43e48dfa1d
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk6gYVcACgkQV3J2n04EauzN3wCfYY30Wy3zSdu6C6f/LCT3ogM2
-s2sAnAv6YbgifGQB8P8abeiZ3/3FC/3I
-=HeuL
+iQEcBAEBCgAGBQJPR2OxAAoJEOTDgjZ80txdPgEH/RTO2xgUzvMWpsFEHJagEKU3
+neUGLdkpwcajtcbQolfQW7gt88D1QVBU0JI/l5ftEuZUsbqtZ0qo351V4yoTjE8P
+5KkAirnkyhRK5sS9u8Dxl9mGDIJTH79/dNlzivGQEQVDbu57pSvPlc3wXKghZfox
+ULX3xHJamZshyJY7qLk2FyZprYvugA2Q6RCyYLp9X/qIjEBJkZYNLLSwA0fSqXfz
+06+yXFPO204gLUDhU1X2+yKldLNtdsgpxfzhqrX6f2/qRTdJaUT4v264VszkfjfZ
+UcDwHqapaUDHU+2eLhR2DklPV8VVOJHbwK+VTc8IXF1K7IAp5BadIt8NsQtJZzg=
+=lF0X
 -----END PGP SIGNATURE-----
