@@ -1,16 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST HTML-TableExtract-2.10.tar.gz 26661 RMD160 c612ac6a1a4f7d3af8c96f6dea8ad3a6a3384b56 SHA1 e979aed41653cc5eda23e170ed400a6073fe235e SHA256 e9bc7bf60a26aacc367d2b0fb9c6464062a7dbbec795ca1fc2d6f99ac8cd4a10
 DIST HTML-TableExtract-2.11.tar.gz 27123 RMD160 d132ddc3b74500784356e61224de41c794b99eec SHA1 1d7267b73ee1341bff60ea47fa5cb97d3f55931e SHA256 1861d55a2aa1728ef56ea2d08d630b9a008456f1106994e4e49e76f56e4955ee
 EBUILD HTML-TableExtract-2.100.0.ebuild 524 RMD160 134c201fab78b5f27581ed0dc4368bb8b70067f1 SHA1 7d9beaac0c1f30dfc288b65b22014f407a9359f9 SHA256 ec931c927f1fd60aca0e36959ae4ce1b78362b8aa10d23c39eb3b3bcd1a8ea90
-EBUILD HTML-TableExtract-2.110.0.ebuild 531 RMD160 300db133989f209ab7d9ce45edac97fdc6695d60 SHA1 1ed35adda1033adaba8b467ddf6c2a5335df2166 SHA256 f3b009eb166db1527ab43d16122500e0ae471a4ac3f75f191bd7fae464b9e611
-MISC ChangeLog 5612 RMD160 926a9ee5a1ea350cbfb0ef83693d032e6d2ad0b1 SHA1 814fff724333b3ae9981ce3470450a24eba12c2e SHA256 96266d2bd8499cc2d736ba011490885b9984e5c57f364dcb85289362fb5c6916
+EBUILD HTML-TableExtract-2.110.0.ebuild 529 RMD160 a60e2651d3b3aa500afc5e20178fca440ca362cd SHA1 585ac808a8b233c83f14d5aa57fd7fbf999fcbdc SHA256 7dca29b5beda9cfb8f523847f3c2e2ac5f1139ff469d58022382b70cf81c1d0d
+MISC ChangeLog 5733 RMD160 9555e57a051a83c9937ff40bda3ec5f3f88add5b SHA1 ffc640cde330133166767d2bd7958f1d13c8c444 SHA256 0cbb107645bf34c50cc5acfc8edfa61bea662c6164fa1837fd82e59b6a84918c
 MISC metadata.xml 243 RMD160 4f3bb40866299274aa348450219c72a32036d7d2 SHA1 c11e3ff8f8b6beb4363701c6e24a7139ae5b4e1e SHA256 2ede05ae30f3e53377d317ce97df987b4cdc5484842a69159c4091f3b62ff8c8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk5jYEUACgkQV3J2n04EauweJACdHgjpaZ5br1PoOB1YyL52foJW
-IGMAoMc2P9+qP1WZfrb7JyTJ8FQmihSF
-=7dEs
+iQEcBAEBCgAGBQJPR2PPAAoJEOTDgjZ80txd7FsH/2BcKS5MAbkYsHrj/iWn5H+u
+ALrWt7kTesYg6DAiRF6y2+idXZGDfIAah4QwOjihsUetD/NlRZzwrSD0GlTUwl0t
+g1rfEfrTeZJJZa40eapVllY65Wz+C0iEmMw3UoHbdIiVLNS6P8wFSAcIkRO5Xvhi
+I9M8KhB5aCeaNynhbqMwW7s0Js+og7FovwnjMnw9vjOmYzsthWrdbfCkmvqBxwxY
+BpfzxgEt0yrxznQV2ERHnQwB4gjU90JYKDMItNqfXk4+96gExVfOHEqnFLLwpTjM
+eNtxDt1U6OmrOhBhL5CHIQzOl+8nuZ0Dsp559+al1ZaKzW7cF9cVSGHWeFEnW1g=
+=z9N4
 -----END PGP SIGNATURE-----
