@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/File-Which
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Which/ChangeLog,v 1.22 2011/09/04 11:20:42 tove Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Which/ChangeLog,v 1.23 2012/02/24 10:12:57 ago Exp $
+
+  24 Feb 2012; Agostino Sarubbo <ago@gentoo.org> File-Which-1.90.0.ebuild:
+  Stable for amd64, wrt bug #400117
 
   04 Sep 2011; Torsten Veller <tove@gentoo.org> -File-Which-1.09.ebuild:
   Cleanup
